# openrouter-mcp-multimodal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONCEPTS.md  Dockerfile  NOTICE  README.md  STRATEGY.md  llms.txt  package-lock.json  package.json  server.json  smithery.yaml  vitest.config.ts  vitest.integration.config.ts  vitest.regression.config.ts
.github/workflows/: ci.yml  metrics.yml  publish.yml
docs/plans/: tool-description-improvement.md
metrics/: history.csv
metrics/snapshots/: 2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  (+36 more)
ongoing_investigation/: repos.md
python/: README.md  pyproject.toml
python/mcp_server_openrouter_multimodal/: __init__.py  __main__.py  launcher.py
scripts/: build-manifest.mjs  build-mcpb-bundle.mjs  dump-tools.mjs  generate-logo.mjs  harvest-metrics.mjs  live-e2e.mjs  smoke-docker-mcp.mjs  smoke-npm-mcp.mjs  smoke-uvx-mcp.mjs
src/: errors.ts  index.ts  logger.ts  model-cache.ts  openrouter-api.ts  tool-descriptions.ts  tool-handlers.ts  version.ts
(+71 files in other folders)
