[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-openrouter-multimodal"
version = "4.5.3"
description = "uvx/pip launcher for @stabgan/openrouter-mcp-multimodal (Node MCP server)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "stabgan" }]
keywords = ["mcp", "openrouter", "llm", "model-context-protocol"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stabgan/openrouter-mcp-multimodal"
Repository = "https://github.com/stabgan/openrouter-mcp-multimodal"
Documentation = "https://github.com/stabgan/openrouter-mcp-multimodal#readme"
"Bug Tracker" = "https://github.com/stabgan/openrouter-mcp-multimodal/issues"

[project.scripts]
mcp-server-openrouter-multimodal = "mcp_server_openrouter_multimodal:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_openrouter_multimodal"]
